[package]
name = "tree-sitter-fennel"
description = "fennel grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "fennel"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/sogaiu/tree-sitter-fennel"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19.2"

[build-dependencies]
cc = "1.0"
